feat: 댓글 post,get 프론트 부분 더미데이터로 구현

--- a/components/comments/comments.module.css
+++ b/components/comments/comments.module.css
@@ -9,7 +9,7 @@
     font: inherit;
     border-radius: 6px;
     padding: 0.5rem 1rem;
-    background-color: transparent;
+    background-color: white;
     color: #77002e;
     border: 1px solid #77002e;
     cursor: pointer;
